--- a/values.yaml
+++ b/values.yaml
@@ -2,6 +2,352 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+xmpp:
+  domain: meet.jitsi
+  authDomain:
+  mucDomain:
+  internalMucDomain:
+  guestDomain:
+
+env: 
+  AUTH_TYPE: jwt
+
+secretEnvs: {}
+
+jicofo:
+  image: 
+    repository: jitsi/jicofo
+    pullPolicy: IfNotPresent
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: ""
+  imagePullSecrets: []
+  podAnnotations: {}
+
+  resources: {}
+    # limits:
+    #   memory: 400Mi
+    #   cpu: 400m
+    # requests:
+    #   memory: 400Mi
+    #   cpu: 400m
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+
+  allowedEnv:
+    - AUTH_TYPE
+    - BRIDGE_AVG_PARTICIPANT_STRESS
+    - BRIDGE_STRESS_THRESHOLD
+    - ENABLE_AUTH
+    - ENABLE_AUTO_OWNER
+    - ENABLE_CODEC_VP8
+    - ENABLE_CODEC_VP9
+    - ENABLE_CODEC_H264
+    - ENABLE_OCTO
+    - ENABLE_RECORDING
+    - ENABLE_SCTP
+    - JICOFO_AUTH_USER
+    - JICOFO_AUTH_PASSWORD
+    - JICOFO_CONF_INITIAL_PARTICIPANT_WAIT_TIMEOUT
+    - JICOFO_CONF_SINGLE_PARTICIPANT_TIMEOUT
+    - JICOFO_SHORT_ID
+    - JICOFO_RESERVATION_ENABLED 
+    - JICOFO_RESERVATION_REST_BASE_URL 
+    - JIBRI_BREWERY_MUC
+    - JIBRI_REQUEST_RETRIES
+    - JIBRI_PENDING_TIMEOUT
+    - JIGASI_BREWERY_MUC
+    - JIGASI_SIP_URI
+    - JVB_BREWERY_MUC
+    - MAX_BRIDGE_PARTICIPANTS
+    - OCTO_BRIDGE_SELECTION_STRATEGY
+    - TZ
+
+prosody:
+  image: 
+    repository: jitsi/prosody
+    pullPolicy: IfNotPresent
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: ""
+  imagePullSecrets: []
+  podAnnotations: {}
+
+  service:
+    type: ClusterIP
+    annotations: {}
+    ports:
+      bosh-insecure: 5280
+      bosh-secure: 5281
+      xmpp-c2s: 5222
+      xmpp-s2s: 5269
+      xmpp-component: 5347
+    nodePorts:
+      bosh-insecure:
+      bosh-secure:
+      xmpp-c2s:
+      xmpp-s2s:
+      xmpp-component:
+
+  extraFiles: []
+    # - name: some-plugin.lua
+    #   mountPath: /prosody-plugins-custom/some-plugin.lua
+    #   content: |
+    #     module:set_global();
+
+  resources: {}
+    # limits:
+    #   memory: 300Mi
+    #   cpu: 300m
+    # requests:
+    #   memory: 300Mi
+    #   cpu: 300m
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+
+  allowedEnv:
+    - AUTH_TYPE
+    - ENABLE_AUTH
+    - ENABLE_GUESTS
+    - ENABLE_LOBBY
+    - ENABLE_AV_MODERATION
+    - ENABLE_XMPP_WEBSOCKET
+    - GLOBAL_MODULES
+    - GLOBAL_CONFIG
+    - LDAP_URL
+    - LDAP_BASE
+    - LDAP_BINDDN
+    - LDAP_BINDPW
+    - LDAP_FILTER
+    - LDAP_AUTH_METHOD
+    - LDAP_VERSION
+    - LDAP_USE_TLS
+    - LDAP_TLS_CIPHERS
+    - LDAP_TLS_CHECK_PEER
+    - LDAP_TLS_CACERT_FILE
+    - LDAP_TLS_CACERT_DIR
+    - LDAP_START_TLS
+    - XMPP_MODULES
+    - XMPP_MUC_MODULES
+    - XMPP_INTERNAL_MUC_MODULES
+    - XMPP_CROSS_DOMAIN
+    - JICOFO_COMPONENT_SECRET
+    - JICOFO_AUTH_USER
+    - JICOFO_AUTH_PASSWORD
+    - JVB_AUTH_USER
+    - JVB_AUTH_PASSWORD
+    - JIGASI_XMPP_USER
+    - JIGASI_XMPP_PASSWORD
+    - JIBRI_XMPP_USER
+    - JIBRI_XMPP_PASSWORD
+    - JIBRI_RECORDER_USER
+    - JIBRI_RECORDER_PASSWORD
+    - JWT_APP_ID
+    - JWT_APP_SECRET
+    - JWT_ACCEPTED_ISSUERS
+    - JWT_ACCEPTED_AUDIENCES
+    - JWT_ASAP_KEYSERVER
+    - JWT_ALLOW_EMPTY
+    - JWT_AUTH_TYPE
+    - JWT_TOKEN_AUTH_MODULE
+    - LOG_LEVEL
+    - PUBLIC_URL
+    - TURN_CREDENTIALS
+    - TURN_HOST
+    - TURNS_HOST
+    - TURN_PORT
+    - TURNS_PORT
+    - TZ
+
+web:
+  # Show shard name on web response with header X-Jitsi-Shard
+  showShardName: true
+  image: 
+    repository: jitsi/prosody
+    pullPolicy: IfNotPresent
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: ""
+  imagePullSecrets: []
+  podAnnotations: {}
+
+  service:
+    type: ClusterIP
+    annotations: {}
+    port: 80
+    # nodePort: 32080
+  
+  extraFiles: []
+    # - name: plugin.head.html
+    #   mountPath: /usr/share/jitsi-meet/plugin.head.html
+    #   content: |
+    #     <style>
+    #     .welcome .welcome-watermark{position:absolute;width:100%;height:auto}
+    #     #footer{margin-top:20px;margin-bottom:20px;font-size:14px}
+    #     </style>
+
+  resources: {}
+    # limits:
+    #   memory: 300Mi
+    #   cpu: 400m
+    # requests:
+    #   memory: 300Mi
+    #   cpu: 400m
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+
+  allowedEnv:
+    - ENABLE_COLIBRI_WEBSOCKET
+    - ENABLE_FLOC
+    - ENABLE_XMPP_WEBSOCKET
+    - DISABLE_HTTPS
+    - DISABLE_DEEP_LINKING
+    - PUBLIC_URL
+    - TZ
+    - AMPLITUDE_ID
+    - ANALYTICS_SCRIPT_URLS
+    - ANALYTICS_WHITELISTED_EVENTS
+    - CALLSTATS_CUSTOM_SCRIPT_URL
+    - CALLSTATS_ID
+    - CALLSTATS_SECRET
+    - CHROME_EXTENSION_BANNER_JSON
+    - CONFCODE_URL
+    - CONFIG_EXTERNAL_CONNECT
+    - DEFAULT_LANGUAGE
+    - DEPLOYMENTINFO_ENVIRONMENT
+    - DEPLOYMENTINFO_ENVIRONMENT_TYPE
+    - DEPLOYMENTINFO_REGION
+    - DEPLOYMENTINFO_SHARD
+    - DEPLOYMENTINFO_USERREGION
+    - DIALIN_NUMBERS_URL
+    - DIALOUT_AUTH_URL
+    - DIALOUT_CODES_URL
+    - DROPBOX_APPKEY
+    - DROPBOX_REDIRECT_URI
+    - DYNAMIC_BRANDING_URL
+    - ENABLE_AUDIO_PROCESSING
+    - ENABLE_AUTH
+    - ENABLE_CALENDAR
+    - ENABLE_FILE_RECORDING_SERVICE
+    - ENABLE_FILE_RECORDING_SERVICE_SHARING
+    - ENABLE_GUESTS
+    - ENABLE_IPV6
+    - ENABLE_LIPSYNC
+    - ENABLE_NO_AUDIO_DETECTION
+    - ENABLE_P2P
+    - ENABLE_PREJOIN_PAGE
+    - ENABLE_WELCOME_PAGE
+    - ENABLE_CLOSE_PAGE
+    - ENABLE_RECORDING
+    - ENABLE_REMB
+    - ENABLE_REQUIRE_DISPLAY_NAME
+    - ENABLE_SIMULCAST
+    - ENABLE_STATS_ID
+    - ENABLE_STEREO
+    - ENABLE_SUBDOMAINS
+    - ENABLE_TALK_WHILE_MUTED
+    - ENABLE_TCC
+    - ENABLE_TRANSCRIPTIONS
+    - ETHERPAD_PUBLIC_URL
+    - ETHERPAD_URL_BASE
+    - GOOGLE_ANALYTICS_ID
+    - GOOGLE_API_APP_CLIENT_ID
+    - INVITE_SERVICE_URL
+    - JICOFO_AUTH_USER
+    - MATOMO_ENDPOINT
+    - MATOMO_SITE_ID
+    - MICROSOFT_API_APP_CLIENT_ID
+    - NGINX_RESOLVER
+    - NGINX_WORKER_PROCESSES
+    - NGINX_WORKER_CONNECTIONS
+    - PEOPLE_SEARCH_URL
+    - RESOLUTION
+    - RESOLUTION_MIN
+    - RESOLUTION_WIDTH
+    - RESOLUTION_WIDTH_MIN
+    - START_AUDIO_ONLY
+    - START_AUDIO_MUTED
+    - START_WITH_AUDIO_MUTED
+    - START_SILENT
+    - DISABLE_AUDIO_LEVELS
+    - ENABLE_NOISY_MIC_DETECTION
+    - START_BITRATE
+    - DESKTOP_SHARING_FRAMERATE_MIN
+    - DESKTOP_SHARING_FRAMERATE_MAX
+    - START_VIDEO_MUTED
+    - START_WITH_VIDEO_MUTED
+    - TESTING_CAP_SCREENSHARE_BITRATE
+    - TESTING_OCTO_PROBABILITY
+    - XMPP_AUTH_DOMAIN
+    - XMPP_BOSH_URL_BASE
+    - XMPP_DOMAIN
+    - XMPP_GUEST_DOMAIN
+    - XMPP_MUC_DOMAIN
+    - XMPP_RECORDER_DOMAIN
+    - TOKEN_AUTH_URL
+
+haproxy:
+  image: 
+    repository: haproxy
+    pullPolicy: IfNotPresent
+    tag: ""
+  imagePullSecrets: []
+  podAnnotations: {}
+
+  service:
+    type: ClusterIP
+    annotations: {}
+    port: 80
+    # nodePort: 32080
+
+  ingress:
+    enabled: false
+    className: ""
+    annotations: {}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: chart-example.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
+
+  resources: {}
+    # limits:
+    #   memory: 300Mi
+    #   cpu: 400m
+    # requests:
+    #   memory: 300Mi
+    #   cpu: 400m
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+
+shards:
+  shard-0:
+  shard-1:
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 replicaCount: 1
 
 image:
@@ -13,28 +359,6 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
-podAnnotations: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
 
 service:
   type: ClusterIP
