update global values

--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "jitsi.labels" . | nindent 4 }}
 type: Opaque
 data:
-  {{- range $key, $value := .Values.secretEnvs }}
+  {{- range $key, $value := .Values.global.secretEnvs }}
   {{- if not (kindIs "invalid" $value) }}
   {{ $key }}: {{ tpl $value $ | b64enc }}
   {{- end }}
