--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -6,12 +6,12 @@ metadata:
     {{- include "jitsi.labels" . | nindent 4 }}
 data:
   XMPP_DOMAIN: {{ include "jitsi.xmpp.domain" . }}
-  XMPP_MUC_DOMAIN: {{ .Values.xmpp.muxDomain | default (printf "muc.%s" (include "jitsi.xmpp.domain" .)) }}
-  XMPP_AUTH_DOMAIN: {{ .Values.xmpp.authDomain | default (printf "auth.%s" (include "jitsi.xmpp.domain" .)) }}
-  XMPP_GUEST_DOMAIN: {{ .Values.xmpp.guestDomain | default (printf "guest.%s" (include "jitsi.xmpp.domain" .)) }}
-  XMPP_RECORDER_DOMAIN: {{ .Values.xmpp.recorderDomain | default (printf "recorder.%s" (include "jitsi.xmpp.domain" .)) }}
-  XMPP_INTERNAL_MUC_DOMAIN: {{ .Values.xmpp.internalMucDomain | default (printf "internal-muc.%s" (include "jitsi.xmpp.domain" .)) }}
-  {{- range $key, $value := .Values.env }}
+  XMPP_MUC_DOMAIN: {{ .Values.global.xmpp.muxDomain | default (printf "muc.%s" (include "jitsi.xmpp.domain" .)) }}
+  XMPP_AUTH_DOMAIN: {{ .Values.global.xmpp.authDomain | default (printf "auth.%s" (include "jitsi.xmpp.domain" .)) }}
+  XMPP_GUEST_DOMAIN: {{ .Values.global.xmpp.guestDomain | default (printf "guest.%s" (include "jitsi.xmpp.domain" .)) }}
+  XMPP_RECORDER_DOMAIN: {{ .Values.global.xmpp.recorderDomain | default (printf "recorder.%s" (include "jitsi.xmpp.domain" .)) }}
+  XMPP_INTERNAL_MUC_DOMAIN: {{ .Values.global.xmpp.internalMucDomain | default (printf "internal-muc.%s" (include "jitsi.xmpp.domain" .)) }}
+  {{- range $key, $value := .Values.global.env }}
   {{- if not (kindIs "invalid" $value) }}
   {{ $key }}: {{ tpl $value $ | quote }}
   {{- end }}
