--- a/templates/jicofo/deployment.yaml
+++ b/templates/jicofo/deployment.yaml
@@ -76,7 +76,7 @@ spec:
                 configMapKeyRef:
                   name: {{ include "jitsi.fullname" . | quote }}
                   key: XMPP_MUC_DOMAIN
-            {{- range $key, $value := .Values.env }}
+            {{- range $key, $value := .Values.global.env }}
             {{- if has $key $.Values.jicofo.allowedEnv }}
             - name: {{ $key | quote }}
               valueFrom:
@@ -85,7 +85,7 @@ spec:
                   key: {{ $key | quote }}
             {{- end }}
             {{- end }}
-            {{- range $key, $value := .Values.secretEnvs }}
+            {{- range $key, $value := .Values.global.secretEnvs }}
             {{- if has $key $.Values.jicofo.allowedEnv }}
             - name: {{ $key | quote }}
               valueFrom:
