--- a/templates/prosody/deployment.yaml
+++ b/templates/prosody/deployment.yaml
@@ -131,7 +131,7 @@ spec:
                 configMapKeyRef:
                   name: {{ include "jitsi.fullname" . | quote }}
                   key: XMPP_INTERNAL_MUC_DOMAIN
-            {{- range $key, $value := .Values.env }}
+            {{- range $key, $value := .Values.global.env }}
             {{- if has $key $.Values.prosody.allowedEnv }}
             - name: {{ $key | quote }}
               valueFrom:
@@ -140,7 +140,7 @@ spec:
                   key: {{ $key | quote }}
             {{- end }}
             {{- end }}
-            {{- range $key, $value := .Values.secretEnvs }}
+            {{- range $key, $value := .Values.global.secretEnvs }}
             {{- if has $key $.Values.prosody.allowedEnv }}
             - name: {{ $key | quote }}
               valueFrom:
