--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -8,6 +8,6 @@ type: Opaque
 data:
   {{- range $key, $value := .Values.global.secretEnvs }}
   {{- if not (kindIs "invalid" $value) }}
-  {{ $key }}: {{ tpl $value $ | b64enc }}
+  {{ $key }}: {{ if typeIs "string" $value}}{{ tpl $value $ | b64enc | quote }}{{ else }}{{ $value | b64enc | quote }}{{ end }}
   {{- end }}
   {{- end }}
