--- a/values.yaml
+++ b/values.yaml
@@ -13,24 +13,39 @@ global:
     internalMucDomain:
     guestDomain:
   env: 
-    AUTH_TYPE: jwt
+    TZ: UTC
+    PUBLIC_URL: https://meet.example.com
+    ENABLE_AUTH: 0
+    ENABLE_GUESTS: 1
+    GLOBAL_MODULES: prometheus,measure_stanza_counts,measure_client_presence
+    GLOBAL_CONFIG: statistics = "internal";\nstatistics_interval = 15;
+    XMPP_MUC_MODULES: muc_meeting_id,muc_domain_mapper
+    JVB_BREWERY_MUC: jvbbrewery
+    JVB_AUTH_USER: jvb
+    JICOFO_AUTH_USER: focus
+    JIGASI_XMPP_USER: jigasi
+    JIGASI_BREWERY_MUC: jigasibrewery
+    JIBRI_RECORDER_USER: recorder
+    JIBRI_XMPP_USER: jibri
+    JIBRI_BREWERY_MUC: jibribrewery
+
+    # For more environment please check docker repo: https://github.com/jitsi/docker-jitsi-meet
+    # JWT_APP_ID: my_jitsi_app_id
 
   secretEnvs: 
-    # XMPP password for Jicofo client connections
-    JICOFO_AUTH_PASSWORD:
-    # XMPP password for JVB client connections
-    JVB_AUTH_PASSWORD:
-    # XMPP password for Jigasi MUC client connections
-    JIGASI_XMPP_PASSWORD:
-    # XMPP recorder password for Jibri client connections
-    JIBRI_RECORDER_PASSWORD:
-    # XMPP password for Jibri client connections
-    JIBRI_XMPP_PASSWORD:
+    JICOFO_AUTH_PASSWORD: # Required
+    JVB_AUTH_PASSWORD: # Required
+    JIGASI_XMPP_PASSWORD: # Required
+    JIBRI_RECORDER_PASSWORD: # Required
+    JIBRI_XMPP_PASSWORD: # Required
+    JVB_STUN_SERVERS: meet-jit-si-turnrelay.jitsi.net:443
+
+    # Any env contains secret should be placed here. Check docker repo for more env: https://github.com/jitsi/docker-jitsi-meet
     # JWT_APP_SECRET: my_jitsi_app_secret
 
   shards:
     shard-0:
-      jvbStartPort: 30000
+      jvbStartPort: 30000 # Use with jvb enabled
     shard-1:
 
 jicofo:
@@ -219,7 +234,7 @@ web:
     - ENABLE_COLIBRI_WEBSOCKET
     - ENABLE_FLOC
     - ENABLE_XMPP_WEBSOCKET
-    - DISABLE_HTTPS
+    - ENABLE_HTTP_REDIRECT
     - DISABLE_DEEP_LINKING
     - PUBLIC_URL
     - TZ
@@ -236,7 +251,6 @@ web:
     - DEPLOYMENTINFO_ENVIRONMENT
     - DEPLOYMENTINFO_ENVIRONMENT_TYPE
     - DEPLOYMENTINFO_REGION
-    - DEPLOYMENTINFO_SHARD
     - DEPLOYMENTINFO_USERREGION
     - DIALIN_NUMBERS_URL
     - DIALOUT_AUTH_URL
@@ -250,7 +264,6 @@ web:
     - ENABLE_FILE_RECORDING_SERVICE
     - ENABLE_FILE_RECORDING_SERVICE_SHARING
     - ENABLE_GUESTS
-    - ENABLE_IPV6
     - ENABLE_LIPSYNC
     - ENABLE_NO_AUDIO_DETECTION
     - ENABLE_P2P
@@ -297,12 +310,6 @@ web:
     - START_WITH_VIDEO_MUTED
     - TESTING_CAP_SCREENSHARE_BITRATE
     - TESTING_OCTO_PROBABILITY
-    - XMPP_AUTH_DOMAIN
-    - XMPP_BOSH_URL_BASE
-    - XMPP_DOMAIN
-    - XMPP_GUEST_DOMAIN
-    - XMPP_MUC_DOMAIN
-    - XMPP_RECORDER_DOMAIN
     - TOKEN_AUTH_URL
 
 haproxy:
