--- a/values.yaml
+++ b/values.yaml
@@ -45,8 +45,9 @@ global:
 
   shards:
     shard-0:
-      jvbStartPort: 30000 # Use with jvb enabled
+      jvbBasePort: 30000 # Use with jvb enabled
     shard-1:
+      jvbBasePort: 31000 # Use with jvb enabled
 
 jicofo:
   image: 
@@ -125,6 +126,7 @@ prosody:
   extraFiles: []
     # - name: some-plugin.lua
     #   mountPath: /prosody-plugins-custom/some-plugin.lua
+    #   mode: 0400
     #   content: |
     #     module:set_global();
 
@@ -194,8 +196,6 @@ prosody:
     - TZ
 
 web:
-  # Show shard name on web response with header X-Jitsi-Shard
-  showShardName: true
   image: 
     repository: jitsi/web
     pullPolicy: IfNotPresent
@@ -213,6 +213,7 @@ web:
   extraFiles: []
     # - name: plugin.head.html
     #   mountPath: /usr/share/jitsi-meet/plugin.head.html
+    #   mode: 0400
     #   content: |
     #     <style>
     #     .welcome .welcome-watermark{position:absolute;width:100%;height:auto}
@@ -352,3 +353,90 @@ haproxy:
   nodeSelector: {}
   tolerations: []
   affinity: {}
+
+jvb:
+  enabled: true
+  replicaCount: 1
+
+  image:
+    repository: nginx
+    pullPolicy: IfNotPresent
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: ""
+
+  imagePullSecrets: []
+
+  statefulSetAnnotations: {}
+    # service-per-pod-label: "statefulset.kubernetes.io/pod-name"
+
+  podAnnotations: {}
+
+  podSecurityContext: {}
+    # fsGroup: 2000
+
+  securityContext: {}
+    # capabilities:
+    #   drop:
+    #   - ALL
+    # readOnlyRootFilesystem: true
+    # runAsNonRoot: true
+    # runAsUser: 1000
+
+  servicePerPod:
+    enabled: true
+    type: ClusterIP
+    port: 80
+    annotations: {}
+
+  ingress:
+    enabled: false
+    className: ""
+    annotations: {}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: chart-example.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
+
+  resources: {}
+    # requests:
+    #   cpu: "1500m"
+    #   memory: "1000Mi"
+    # limits:
+    #   cpu: "8000m"
+    #   memory: "1000Mi"
+
+  autoscaling:
+    enabled: true
+    minReplicas: 1
+    maxReplicas: 100
+    targetCPUUtilizationPercentage: 80
+    # targetMemoryUtilizationPercentage: 80
+
+  nodeSelector: {}
+
+  tolerations: []
+
+  affinity: {}
+
+  terminationGracePeriodSeconds: 3600
+
+  monitoring:
+    enabled: false
+    image:
+      repository: systemli/prometheus-jitsi-meet-exporter
+      pullPolicy: IfNotPresent
+      tag: "1.1.6"
+    resources: {}
+      # requests:
+      #   cpu: "100m"
+      #   memory: "100Mi"
+      # limits:
+      #   cpu: "100m"
+      #   memory: "100Mi"
