--- a/templates/haproxy/ingress.yaml
+++ b/templates/haproxy/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.haproxy.ingress.enabled -}}
+{{- if and .Values.haproxy.enabled .Values.haproxy.ingress.enabled -}}
 {{- $fullName := printf "%s-%s" (include "jitsi.fullname" .) "haproxy" -}}
 {{- $svcPort := .Values.haproxy.service.port -}}
 {{- if and .Values.haproxy.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
@@ -18,6 +18,7 @@ metadata:
   name: {{ $fullName }}
   labels:
     {{- include "jitsi.labels" . | nindent 4 }}
+    jitsi/component: haproxy
   {{- with .Values.haproxy.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
