--- a/templates/haproxy/service.yaml
+++ b/templates/haproxy/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.haproxy.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -23,3 +24,4 @@ spec:
   selector:
     {{- include "jitsi.selectorLabels" . | nindent 4 }}
     jitsi/component: haproxy
+{{- end }}
