--- a/templates/haproxy/statefulset.yaml
+++ b/templates/haproxy/statefulset.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.haproxy.enabled }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -86,4 +87,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-
+{{- end }}
