enable prosody and jicofo

--- a/templates/jicofo/deployment.yaml
+++ b/templates/jicofo/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.jicofo.enabled }}
 {{- range $shardName, $shardConfig := .Values.global.shards }}
 {{- $fullShardName := include "jitsi.fullShardName" (dict "root" $ "shardName" $shardName) -}}
 {{- with $ }}
@@ -110,4 +111,4 @@ spec:
       {{- end }}
 {{- end }}
 {{- end }}
-
+{{- end }}
