--- a/templates/jvb/configmap.yaml
+++ b/templates/jvb/configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.jvb.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -162,3 +163,4 @@ data:
   {{ .name }}: |
     {{- .content | nindent 4 }}
   {{- end }}
+{{- end }}
