--- a/templates/prosody/configmap.yaml
+++ b/templates/prosody/configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.prosody.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -214,3 +215,4 @@ data:
   {{ .name }}: |
     {{- .content | nindent 4 }}
   {{- end }}
+{{- end }}
