--- a/templates/web/configmap.yaml
+++ b/templates/web/configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.web.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -9,3 +10,4 @@ data:
   {{ .name }}: |
     {{- .content | nindent 4 }}
   {{- end }}
+{{- end }}
