--- a/templates/web/deployment.yaml
+++ b/templates/web/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.web.enabled }}
 {{- range $shardName, $shardConfig := .Values.global.shards }}
 {{- $fullShardName := include "jitsi.fullShardName" (dict "root" $ "shardName" $shardName) -}}
 {{- with $ }}
@@ -147,4 +148,4 @@ spec:
       {{- end }}
 {{- end }}
 {{- end }}
-
+{{- end }}
