--- a/values.yaml
+++ b/values.yaml
@@ -13,31 +13,34 @@ global:
     internalMucDomain:
     guestDomain:
   env: 
-    TZ: UTC
-    PUBLIC_URL: https://meet.example.com
     ENABLE_AUTH: 0
     ENABLE_GUESTS: 1
-    GLOBAL_MODULES: prometheus,measure_stanza_counts,measure_client_presence
+    ENABLE_COLIBRI_WEBSOCKET: 1
     GLOBAL_CONFIG: statistics = "internal";\nstatistics_interval = 15;
-    XMPP_MUC_MODULES: muc_meeting_id,muc_domain_mapper
-    JVB_BREWERY_MUC: jvbbrewery
-    JVB_AUTH_USER: jvb
-    JICOFO_AUTH_USER: focus
-    JIGASI_XMPP_USER: jigasi
-    JIGASI_BREWERY_MUC: jigasibrewery
+    GLOBAL_MODULES: prometheus,measure_stanza_counts,measure_client_presence
+    JIBRI_BREWERY_MUC: jibribrewery
     JIBRI_RECORDER_USER: recorder
     JIBRI_XMPP_USER: jibri
-    JIBRI_BREWERY_MUC: jibribrewery
+    JICOFO_AUTH_USER: focus
+    JIGASI_BREWERY_MUC: jigasibrewery
+    JIGASI_XMPP_USER: jigasi
+    JVB_AUTH_USER: jvb
+    JVB_BREWERY_MUC: jvbbrewery
+    JVB_ENABLE_APIS: colibri,rest
+    JVB_WS_DOMAIN: ws.meet.example.com
+    PUBLIC_URL: https://meet.example.com
+    TZ: UTC
+    XMPP_MUC_MODULES: muc_meeting_id,muc_domain_mapper
 
     # For more environment please check docker repo: https://github.com/jitsi/docker-jitsi-meet
     # JWT_APP_ID: my_jitsi_app_id
 
   secretEnvs: 
-    JICOFO_AUTH_PASSWORD: # Required
-    JVB_AUTH_PASSWORD: # Required
-    JIGASI_XMPP_PASSWORD: # Required
     JIBRI_RECORDER_PASSWORD: # Required
     JIBRI_XMPP_PASSWORD: # Required
+    JICOFO_AUTH_PASSWORD: # Required
+    JIGASI_XMPP_PASSWORD: # Required
+    JVB_AUTH_PASSWORD: # Required
     JVB_STUN_SERVERS: meet-jit-si-turnrelay.jitsi.net:443
 
     # Any env contains secret should be placed here. Check docker repo for more env: https://github.com/jitsi/docker-jitsi-meet
@@ -46,10 +49,11 @@ global:
   shards:
     shard-0:
       jvbBasePort: 30000 # Use with jvb enabled
-    shard-1:
-      jvbBasePort: 31000 # Use with jvb enabled
+    # shard-1:
+    #   jvbBasePort: 31000 # Use with jvb enabled
 
 jicofo:
+  enabled: true
   image: 
     repository: jitsi/jicofo
     pullPolicy: IfNotPresent
@@ -99,6 +103,7 @@ jicofo:
     - TZ
 
 prosody:
+  enabled: true
   image: 
     repository: jitsi/prosody
     pullPolicy: IfNotPresent
@@ -196,6 +201,7 @@ prosody:
     - TZ
 
 web:
+  enabled: true
   image: 
     repository: jitsi/web
     pullPolicy: IfNotPresent
@@ -209,6 +215,23 @@ web:
     annotations: {}
     port: 80
     # nodePort: 32080
+
+  # Only work with 1 shard. You can omit haproxy to expose web service directly
+  ingress:
+    enabled: false
+    className: ""
+    annotations: {}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: chart-example.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
   
   extraFiles: []
     # - name: plugin.head.html
@@ -314,6 +337,7 @@ web:
     - TOKEN_AUTH_URL
 
 haproxy:
+  enabled: true
   image: 
     repository: haproxy
     pullPolicy: IfNotPresent
@@ -356,10 +380,11 @@ haproxy:
 
 jvb:
   enabled: true
+
   replicaCount: 1
 
   image:
-    repository: nginx
+    repository: jitsi/jvb
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
     tag: ""
@@ -371,38 +396,29 @@ jvb:
 
   podAnnotations: {}
 
-  podSecurityContext: {}
-    # fsGroup: 2000
+  udp:
+    service:
+      enabled: true
+      annotations: {}
 
-  securityContext: {}
-    # capabilities:
-    #   drop:
-    #   - ALL
-    # readOnlyRootFilesystem: true
-    # runAsNonRoot: true
-    # runAsUser: 1000
+  websocket:
+    service:
+      enabled: true
+      annotations: {}
+      port: 9090
 
-  servicePerPod:
-    enabled: true
-    type: ClusterIP
-    port: 80
-    annotations: {}
-
-  ingress:
-    enabled: false
-    className: ""
-    annotations: {}
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
-    hosts:
-      - host: chart-example.local
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-    tls: []
-    #  - secretName: chart-example-tls
-    #    hosts:
-    #      - chart-example.local
+    ingress:
+      enabled: false
+      className: ""
+      annotations: {}
+        # kubernetes.io/ingress.class: nginx
+        # kubernetes.io/tls-acme: "true"
+      hosts:
+        - ws.meet.example.com
+      tls: []
+      #  - secretName: chart-example-tls
+      #    hosts:
+      #      - ws.meet.example.com
 
   resources: {}
     # requests:
@@ -413,9 +429,9 @@ jvb:
     #   memory: "1000Mi"
 
   autoscaling:
-    enabled: true
+    enabled: false
     minReplicas: 1
-    maxReplicas: 100
+    maxReplicas: 10
     targetCPUUtilizationPercentage: 80
     # targetMemoryUtilizationPercentage: 80
 
@@ -426,6 +442,22 @@ jvb:
   affinity: {}
 
   terminationGracePeriodSeconds: 3600
+
+  allowedEnv:
+    - ENABLE_COLIBRI_WEBSOCKET
+    - ENABLE_OCTO
+    - JVB_AUTH_USER
+    - JVB_AUTH_PASSWORD
+    - JVB_BREWERY_MUC
+    - JVB_STUN_SERVERS
+    - JVB_ENABLE_APIS
+    - JVB_WS_DOMAIN
+    - PUBLIC_URL
+    - JVB_OCTO_BIND_ADDRESS
+    - JVB_OCTO_PUBLIC_ADDRESS
+    - JVB_OCTO_BIND_PORT
+    - JVB_OCTO_REGION
+    - TZ
 
   monitoring:
     enabled: false
