--- a/templates/prosody/deployment.yaml
+++ b/templates/prosody/deployment.yaml
@@ -26,6 +26,7 @@ spec:
   template:
     metadata:
       annotations:
+        checksum/privateconfig: {{ include (print $.Template.BasePath "/prosody/configmap.yaml") . | sha256sum }}
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
         checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
         {{- with .Values.prosody.podAnnotations }}
