--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: jitsi
-description: A Helm chart for Kubernetes
+description: A Jitsi Meet Helm Chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
 #
